# Face_Mask_Detector

./: .gitignore  CMakeLists.txt  Img  README.md
Img/: Logo
lib/paddle-lite/cxx/include/: paddle_lite_factory_helper.h  paddle_place.h  paddle_use_kernels.h  paddle_use_ops.h  paddle_use_passes.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  bbox_tracker.cpp  bbox_tracker.h  cmake_install.cmake  data_structures.h  face_detector.cpp  face_detector.h  mask_detector.cpp  mask_detector.h
test/: CMakeLists.txt  face_detector_tests.cpp  mask_detector_tests.cpp  test.cpp
tests/: CMakeLists.txt  test.cpp
